# fcked_editor

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
docs/: index.html
docs/css/: style.css  style.css.map
docs/js/: main.js
public/: index.html
public/css/: style.css
public/js/: markdown.js
src/: emojifck.rs  emojis.json  font_fckin.rs  lib.rs
src/html/js/: about.js  cheatsheet.js  editor.js  image.js  index.js  link.js  menu.js  text_parsing.js  toolbar.js
src/html/scss/: style-old-blue.scss  style.scss
src/rust/: lib.rs  main.rs  processing.rs
src/rust/processing/: emojifck.rs
