[package]
name = "markdown_fckr_wasm"
version = "0.1.0"
authors = ["Mary Knize <maryknize@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
regex = "1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2.74"