[package]
name = "markdown_fckr"
version = "0.1.0"
authors = ["Mary Knize <maryknize@gmail.com>"]
edition = "2018"

[lib]
name = "markdown_fckr_wasm"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "markdown_fckr"
path = "src/rust/main.rs"

[profile.release]
lto = true
opt-level = "s"

[dependencies]
regex = "1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2.74"